more alignment fixes

--- a/style.css
+++ b/style.css
@@ -304,8 +304,8 @@ section {
 
 #about {
     position: relative;
-    max-width: 1350px; 
-    margin: 0 auto; 
+    /* max-width: 1350px;  */
+    margin: 10 auto; 
     min-height: 100vh;
     height: auto;
     padding: 1 1rem;
@@ -317,6 +317,10 @@ section {
     margin-top: 2rem;
 }
   
+.text-container {
+    text-align: center;
+}
+
 .about-details-container {
     justify-content: center;
     flex-direction: column;
@@ -325,6 +329,7 @@ section {
 .about-containers,
 .about-details-container {
     display: flex;
+    
 }
   
 .about-pic {
